# ArmadilloWall

./: CMakeLists.txt  main.cpp
inc/: domain.hpp  equals.hpp  grid.hpp  interval.hpp  numericalparam.hpp  paralel.hpp  physicsparam.hpp  rectangle.hpp
src/: CMakeLists.txt  equals.cpp  grid.cpp  main.cpp  paralel.cpp
test/: CMakeLists.txt  testDomain.cpp  testGrid.cpp  testInterval.cpp  testParalel.cpp  testRectangle.cpp
